--- a/package.json
+++ b/package.json
@@ -1,19 +1,17 @@
 {
-  "name": "currency-converter-backend",
-  "version": "1.0.0",
-  "description": "Node.js API for currency conversion",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
-  },
+  "name": "currency-converter-frontend",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
     "axios": "^1.6.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1"
   },
-  "devDependencies": {
-    "nodemon": "^3.0.2"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   }
 }
